--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
+    "cssnano": "^4.1.10",
     "postcss": "^7.0.32",
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.6.1"
