--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/ui": "^0.1.4",
-    "watch": "^1.0.2",
-    "tailwindcss": "^1.8.10"
+    "tailwindcss": "^1.8.10",
+    "watch": "^1.0.2"
   }
 }
